<resources>
    <string name="app_name">Shop expert</string>

    <string name="facebook_app_id">1949689358388929</string>
    <string name="fb_login_protocol_scheme">fb1949689358388929</string>

    <!--Main fragment -->
    <string name="no_list_to_show">Create your first list just tap the pink button</string>

    <!--Drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btn_sign_in">SIGN IN OR SIGN UP</string>

    <!--New list-->
    <string name="create_hint">New list</string>
    <string name="dismiss">X</string>

    <!--Tabbed view-->
    <string name="title_activity_log_reg">LogRegActivity</string>
    <string name="tab_text_1">SIGN IN</string>
    <string name="tab_text_2">SIGN UP</string>


    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="firstName">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="login">SIGN IN</string>
    <string name="register">CREATE ACCOUNT</string>
    <string name="sign_in_google">SIGN IN WITH GOOGLE +</string>
    <string name="sign_in_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="forgot_pass">FORGOT PASSWORD</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="success_registration">Successfully registered! Now you can sign in.</string>
    <string name="success_login">Enjoy in using your Shopping expert!</string>
    <string name="email_error">Email address is not valid!</string>
    <string name="login_error">Wrong credentials for login!</string>

    <string name="loading">Loading…</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <!-- Strings related to password recovery -->
    <string name="recovery_btn">GET PASSWORD</string>
    <string name="recovery_message">Forgot your password? Please provide your email address and you will receive your password.</string>
    <string name="recovery_message_toast">We sent you password on provided email. Continue with signing in.</string>

    <!-- Errors -->
    <string name="err_required_email">Please enter email!</string>
    <string name="err_valid_email">Email address is not valid!</string>
    <string name="err_required_password">Please enter password!</string>
    <string name="err_required_firstname">Please enter firstname!</string>
    <string name="err_required_lastname">Please enter lastname!</string>
    <!--
    TODO: Before you run your application, you need a Google Maps API key.

    To get one, follow this link, follow the directions and press "Create" at the end:
    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=A2:C8:08:96:89:1B:A7:03:67:CD:58:E5:CD:55:69:AF:38:1F:EC:15%3Bcom.ftn.mdj.activities

    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=A2:C8:08:96:89:1B:A7:03:67:CD:58:E5:CD:55:69:AF:38:1F:EC:15%3Bcom.ftn.mdj.activities

    You can also add your credentials to an existing key, using these values:

    Package name:
    A2:C8:08:96:89:1B:A7:03:67:CD:58:E5:CD:55:69:AF:38:1F:EC:15

    SHA-1 certificate fingerprint:
    A2:C8:08:96:89:1B:A7:03:67:CD:58:E5:CD:55:69:AF:38:1F:EC:15

    Alternatively, follow the directions here:
    https://developers.google.com/maps/documentation/android/start#get-key

    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
    string in this file.
    -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAu3PLh_WaL_1SS1OmM8L0M9e_X55BIEgU</string>
    <string name="rename_list">Rename List</string>
    <string name="new_list_name">New list name</string>
    <string name="no_trash">No list in trash.</string>
    <string name="title_trash">Trash</string>
    <string name="title_map">Shopping place</string>
    <string name="friend_list_is_empty">Friend list is empty</string>

    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
