<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_dismiss_rename"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@drawable/round_button_background"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dismiss"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />


        <TextView
            android:id="@+id/rename_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/rename_list"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    <EditText
        android:id="@+id/rename_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/new_list_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/btn_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:text="Rename"
            android:textColor="@color/white" />
</LinearLayout>