<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ForgotPasswordActivity"
    android:background="@color/lightOrange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/recovery_message"
            android:textAlignment="center"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/recoverPass_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/recoverPass_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="12dp"
            android:background="@color/colorAccent"
            android:text="@string/recovery_btn"
            android:textColor="@color/black"/>

    </LinearLayout>
</ScrollView>